@@ -52,72 +52,6 @@
 			<table class="widefat">
 				<thead>
 					<tr>
-						<th colspan="3"><?php _e('Menubar','easel'); ?></th>
-					</tr>
-				</thead>
-				<tr class="alternate">
-					<th scope="row"><label for="disable_default_menubar"><?php _e('Disable default Menubar','easel'); ?></label></th>
-					<td>
-						<input id="disable_default_menubar" name="disable_default_menubar" type="checkbox" value="1" <?php checked(true, $easel_options['disable_default_menubar']); ?> />
-					</td>
-					<td>
-						<?php _e('Allows you to customize the location of the Menubar via Widgets or, just not have it.','easel'); ?>
-					</td>
-				</tr>
-				<tr>
-					<th scope="row"><label for="enable_search_in_menubar"><?php _e('Enable Search Form','easel'); ?></label></th>
-					<td>
-						<input id="enable_search_in_menubar" name="enable_search_in_menubar" type="checkbox" value="1" <?php checked(true, $easel_options['enable_search_in_menubar']); ?> />
-					</td>
-					<td>
-						<?php _e('Searchforms can be fun when you have something to search for.','easel'); ?>
-					</td>
-				</tr>
-				<tr class="alternate">
-					<th scope="row"><label for="enable_rss_in_menubar"><?php _e('Enable RSS Link','easel'); ?></label></th>
-					<td>
-						<input id="enable_rss_in_menubar" name="enable_rss_in_menubar" type="checkbox" value="1" <?php checked(true, $easel_options['enable_rss_in_menubar']); ?> />
-					</td>
-					<td>
-					<?php _e('Adds an RSS link icon to your menubar on the right side.','easel'); ?>
-					</td>
-				</tr>
-				<tr>
-					<th scope="row"><label for="disable_jquery_menu_code"><?php _e('Disable the menubar jQuery?','easel'); ?></label></th>
-					<td>
-						<input id="disable_jquery_menu_code" name="disable_jquery_menu_code" type="checkbox" value="1" <?php checked(true, $easel_options['disable_jquery_menu_code']); ?> />
-					</td>
-					<td>
-						<?php _e('Disable the loading of the menubar jQuery.  If you do not want the ddsmoother menu code to load. (will not do drop downs without it)','easel'); ?>
-					</td>
-				</tr>
-				<tr class="alternate">
-					<th scope="row"><label for="menubar_social_icons"><?php _e('Enable Social Icons in Menubar?','easel'); ?></label></th>
-					<td>
-						<input id="menubar_social_icons" name="menubar_social_icons" type="checkbox" value="1" <?php checked(true, $easel_options['menubar_social_icons']); ?> />
-					</td>
-					<td>
-					<?php _e('Adds additional social icons in the menubar on in the menunav area.','easel'); ?><br />
-					<?php _e('Twitter','easel'); ?><br />
-					<input type="text" size="20" name="menubar_social_twitter" id="menubar_social_twitter" value="<?php echo $easel_options['menubar_social_twitter']; ?>" /><br />
-					<?php _e('facebook','easel'); ?><br />
-					<input type="text" size="20" name="menubar_social_facebook" id="menubar_social_facebook" value="<?php echo $easel_options['menubar_social_facebook']; ?>" /><br />
-					</td>
-				</tr>
-				<tr>
-					<th scope="row"><label for="enable_breadcrumbs"><?php _e('Enable Breadcrumbs?','easel'); ?></label></th>
-					<td>
-						<input id="enable_breadcrumbs" name="enable_breadcrumbs" type="checkbox" value="1" <?php checked(true, $easel_options['enable_breadcrumbs']); ?> />
-					</td>
-					<td>
-						<?php _e('This will create a pathable breathcrumbs beneith the menubar underneith the default menubar location.','easel'); ?>
-					</td>
-				</tr>
-			</table>
-			
-			<table class="widefat">
-				<thead>
-					<tr>
 						<th colspan="3"><?php _e('Pages','easel'); ?></th>
 					</tr>
 				</thead>
